Layout: z-index fixes

--- a/src/app/sections/header/header.component.scss
+++ b/src/app/sections/header/header.component.scss
@@ -25,6 +25,7 @@
     background: $color-accent;
     border-radius: 1vh;
     font-size: 1.5vh;
+    z-index: 1;
 }
 
 
