--- a/src/app/sections/menu/menu.component.scss
+++ b/src/app/sections/menu/menu.component.scss
@@ -28,6 +28,7 @@
     flex-direction: row;
     align-items: center;
     align-self: center;
+    z-index: 999;
 }
 
 .menu img.logo {
